# python-project-52

./: .gitignore  Makefile  README.md  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
hexlet-code/task_manager/: urls.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  apps.py  models.py  rollbar_middleware.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/registration/: login.html
task_manager/templates/task_manager/: base.html  index.html
task_manager/templates/task_manager/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/task_manager/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/task_manager/tasks/: create.html  delete.html  detail.html  tasks.html  update.html
task_manager/templates/task_manager/users/: create.html  delete.html  update.html  users.html
task_manager/users/: forms.py  views.py
task_manager_app/: __init__.py  admin.py  apps.py  filters.py  forms.py  tests.py  urls.py  views.py
task_manager_app/fixtures/: users.json
task_manager_app/migrations/: 0001_initial.py  0002_load_users.py
task_manager_app/templates/registration/: login.html
task_manager_app/templates/task_manager_app/: base.html  index.html
task_manager_app/templates/task_manager_app/labels/: create.html  delete.html  labels.html  update.html
task_manager_app/templates/task_manager_app/statuses/: create.html  delete.html  statuses.html  update.html
task_manager_app/templates/task_manager_app/tasks/: create.html  delete.html  detail.html  tasks.html  update.html
task_manager_app/templates/task_manager_app/users/: create.html  delete.html  update.html  users.html
templates/: index.html
