[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "python-dotenv>=1.0",
    "dj-database-url>=2.0",
    "gunicorn>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]
